--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">Nosotros</a></li>
           <li><a href="#team">Equipo</a></li>
+          <!-- <li><a href="./data/team.json" download="reportePrueba">Download</a></li> -->
           <li><a href="#services">Serivicios</a></li>
           <li><a href="portfolio.html">Portafolio</a></li>
           <li class="drop-down"><a href="">Acerca de</a>
