change portfolio - details

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
@@ -72,19 +72,9 @@
       <div class="container">
 
         <div class="portfolio-details-container">
-
-          <div class="owl-carousel portfolio-details-carousel">
-            <img id="img1" src="" class="img-fluid" alt="portfolio_1">
-            <img id="img2" src="" class="img-fluid" alt="portfolio_2">
-            <img id="img3" src="" class="img-fluid" alt="portfolio_3">
-            <img id="img4" src="" class="img-fluid" alt="portfolio_4">
-            <img id="img5" src="" class="img-fluid" alt="portfolio_5">
-          </div>
-
           <div class="portfolio-info">
             <h3>Información</h3>
           </div>
-
         </div>
 
         <div class="portfolio-description">
