--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
@@ -49,21 +49,6 @@
 
   <main id="main">
 
-    <!-- ======= Breadcrumbs Section ======= -->
-    <section class="breadcrumbs">
-      <div class="container">
-
-        <div class="d-flex justify-content-between align-items-center">
-          <h2></h2>
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">Portafolio</a></li>
-          </ol>
-        </div>
-
-      </div>
-    </section><!-- Breadcrumbs Section -->
-
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
       <div class="container">
@@ -85,12 +70,32 @@
 
         <div class="row portfolio-container" data-aos="fade-up">
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1611429166/Tecnovacion/portfolio/Escondida1_gjqp7k.jpg" class="img-fluid" alt="portfolio">
+              <div class="portfolio-links">
+                <a href="https://res.cloudinary.com/dfeujtobk/image/upload/v1611429166/Tecnovacion/portfolio/Escondida1_gjqp7k.jpg" data-gall="portfolioGallery" class="venobox" title="La Escondida"><i class="bx bx-plus"></i></a>
+                <a onclick="showProjectDetail('Escondida')"  title="Más Detalles"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1610413944/Tecnovacion/portfolio/Infotech_obvctf.jpg" class="img-fluid" alt="portfolio">
               <div class="portfolio-links">
-                <a href="https://res.cloudinary.com/dfeujtobk/image/upload/v1610413944/Tecnovacion/portfolio/Infotech_obvctf.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a onclick="showProjectDetail('Infotech')" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://res.cloudinary.com/dfeujtobk/image/upload/v1610413944/Tecnovacion/portfolio/Infotech_obvctf.jpg" data-gall="portfolioGallery" class="venobox" title="Infotech"><i class="bx bx-plus"></i></a>
+                <a onclick="showProjectDetail('Infotech')" title="Más Detalles"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1611429166/Tecnovacion/portfolio/Delicious1_lclagd.jpg" class="img-fluid" alt="portfolio">
+              <div class="portfolio-links">
+                <a href="https://res.cloudinary.com/dfeujtobk/image/upload/v1611429166/Tecnovacion/portfolio/Delicious1_lclagd.jpg" data-gall="portfolioGallery" class="venobox" title="Delicious"><i class="bx bx-plus"></i></a>
+                <a onclick="showProjectDetail('Delicious')"  title="Más Detalles"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -99,8 +104,8 @@
             <div class="portfolio-wrap">
               <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1610413944/Tecnovacion/portfolio/Market1_t7ptvf.jpg" class="img-fluid" alt="portfolio">
               <div class="portfolio-links">
-                <a href="https://res.cloudinary.com/dfeujtobk/image/upload/v1610413944/Tecnovacion/portfolio/Market1_t7ptvf.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a onclick="showProjectDetail('Market')" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://res.cloudinary.com/dfeujtobk/image/upload/v1610413944/Tecnovacion/portfolio/Market1_t7ptvf.jpg" data-gall="portfolioGallery" class="venobox" title="MarketZone"><i class="bx bx-plus"></i></a>
+                <a onclick="showProjectDetail('Market')" title="Más Detalles"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -109,8 +114,8 @@
             <div class="portfolio-wrap">
               <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1610413944/Tecnovacion/portfolio/Homeworks1_a6maf0.jpg" class="img-fluid" alt="portfolio">
               <div class="portfolio-links">
-                <a href="https://res.cloudinary.com/dfeujtobk/image/upload/v1610413944/Tecnovacion/portfolio/Homeworks1_a6maf0.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a onclick="showProjectDetail('Homeworks')" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://res.cloudinary.com/dfeujtobk/image/upload/v1610413944/Tecnovacion/portfolio/Homeworks1_a6maf0.jpg" data-gall="portfolioGallery" class="venobox" title="HomeWorks"><i class="bx bx-plus"></i></a>
+                <a onclick="showProjectDetail('Homeworks')" title="Más Detalles"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -119,8 +124,8 @@
             <div class="portfolio-wrap">
               <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1610413945/Tecnovacion/portfolio/MarketPage1_c0h4gh.jpg" class="img-fluid" alt="portfolio">
               <div class="portfolio-links">
-                <a href="https://res.cloudinary.com/dfeujtobk/image/upload/v1610413945/Tecnovacion/portfolio/MarketPage1_c0h4gh.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a onclick="showProjectDetail('MarketPage')"  title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://res.cloudinary.com/dfeujtobk/image/upload/v1610413945/Tecnovacion/portfolio/MarketPage1_c0h4gh.jpg" data-gall="portfolioGallery" class="venobox" title="MarketZone Page"><i class="bx bx-plus"></i></a>
+                <a onclick="showProjectDetail('MarketPage')"  title="Más Detalles"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -129,8 +134,8 @@
             <div class="portfolio-wrap">
               <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1610413944/Tecnovacion/portfolio/InfotechPage1_yxvw3b.jpg" class="img-fluid" alt="portfolio">
               <div class="portfolio-links">
-                <a href="https://res.cloudinary.com/dfeujtobk/image/upload/v1610413944/Tecnovacion/portfolio/InfotechPage1_yxvw3b.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
-                <a onclick="showProjectDetail('InfotechPage')" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://res.cloudinary.com/dfeujtobk/image/upload/v1610413944/Tecnovacion/portfolio/InfotechPage1_yxvw3b.jpg" data-gall="portfolioGallery" class="venobox" title="Infotech Page"><i class="bx bx-plus"></i></a>
+                <a onclick="showProjectDetail('InfotechPage')" title="Más Detalles"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -139,8 +144,8 @@
             <div class="portfolio-wrap">
               <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1610413945/Tecnovacion/portfolio/Chat1_eyuud8.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="https://res.cloudinary.com/dfeujtobk/image/upload/v1610413945/Tecnovacion/portfolio/Chat1_eyuud8.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
-                <a onclick="showProjectDetail('Chat')" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://res.cloudinary.com/dfeujtobk/image/upload/v1610413945/Tecnovacion/portfolio/Chat1_eyuud8.jpg" data-gall="portfolioGallery" class="venobox" title="Chat"><i class="bx bx-plus"></i></a>
+                <a onclick="showProjectDetail('Chat')" title="Más Detalles"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
