--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo mr-auto">
+        <!-- <a href="index.html"><img src="assets/img/LogoTecnovacion1.png" alt="logo_tecnovacion" class="img-fluid"></a> -->
         <a href="index.html"><img src="assets/img/LogoTecnovacion.png" alt="logo_tecnovacion" class="img-fluid"></a>
       </div>
 
@@ -51,19 +52,9 @@
               <li><a href="#hire">¿Como contratar?</a></li>
               <li><a href="#clients">Clientes</a></li>
               <li><a href="#testimonials">Testimonios</a></li>
-              <li class="drop-down"><a href="#">Drop Down 2</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
             </ul>
           </li>
           <li><a href="#contact">Contáctanos</a></li>
-
         </ul>
       </nav><!-- .nav-menu -->
 
@@ -581,6 +572,10 @@
                   <input type="text" class="form-control" name="email" id="email" placeholder="Teléfono..."/>
                   <div class="validate"></div>
                 </div>
+              </div>
+              <div class="form-group">
+                <input type="text" class="form-control" name="subject" id="subject" placeholder="Correo...."/>
+                <div class="validate"></div>
               </div>
               <div class="form-group">
                 <input type="text" class="form-control" name="subject" id="subject" placeholder="Asunto...."/>
