--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">Nosotros</a></li>
           <li><a href="#team">Equipo</a></li>
+          <li><a href="prosoft.html">Prosoft</a></li>
           <!-- <li><a href="./data/team.json" download="reportePrueba">Download</a></li> -->
           <li><a href="#services">Serivicios</a></li>
           <li><a href="portfolio.html">Portafolio</a></li>
