--- a/prosoft.html
+++ b/prosoft.html
@@ -68,7 +68,7 @@
               				Cotización
               </h4>
               
-              <a href=".assets/pdf/Cotizacion.pdf" download="cotizacion">descargar</a>
+              <a href=".assets/data/Cotizacion.pdf" download="cotizacion">descargar</a>
               
               </div>
           </div>
