new pdf's to download and design

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">Nosotros</a></li>
           <li><a href="#team">Equipo</a></li>
-          <li><a href="prosoft.html">Prosoft</a></li>
+          <li><a href="prosoft.html">PROSOFT</a></li>
           <!-- <li><a href="./data/team.json" download="reportePrueba">Download</a></li> -->
           <li><a href="#services">Serivicios</a></li>
           <li><a href="portfolio.html">Portafolio</a></li>
@@ -83,14 +83,14 @@
             <div class="content">
               <h3>¿Quiénes somos?</h3>
               <p>
-                Somos una empresa de desarrollo tecnologico 100% mexicana, con un fuerte compromiso al servicio y atención al cliente.
+                Somos una empresa de desarrollo tecnológico 100% mexicana, con un fuerte compromiso al servicio y atención al cliente.
               </p>
               <p>
                 Nuestra principal motivación es la satisfacción de nuestros clientes, ofreciendo las mejores herramientas tecnológicas
                 para el incremento de su productividad y el cumplimiento de sus metas.
               </p>
               <p>
-                Tecnovación mas que una empresa cualquiera, es un equipo de trabajo ampliamente productivo y rentable, capaz de ofrecer
+                Tecnovación más que una empresa cualquiera, es un equipo de trabajo ampliamente productivo y rentable, capaz de ofrecer
                 soluciones confiables a nuestros clientes que así nos lo demandan.
               </p>
             </div>
@@ -102,9 +102,9 @@
                   <i class="bx bx-bookmark"></i>
                   <h4>Nuestra misión</h4>
                   <p>
-                    Proveer soluciones de software apoyados en tecnologias autosuficientes y evolutivas en todas las areas demandantes de desarrollo informatico inteligente,
-                    aplicado a la gestión de procesos productivos; teniendo como sello distintivo contra la competencia nuestra calidad del producto y servicio, viendose
-                    reflejado en las satisfacción del cliente
+                    Proveer soluciones de software apoyados en tecnologías autosuficientes y evolutivas en todas las áreas demandantes de desarrollo informático inteligente,
+                    aplicado a la gestión de procesos productivos; teniendo como sello distintivo contra la competencia nuestra calidad del producto y servicio, viéndose
+                    reflejado en la satisfacción del cliente.
                   </p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
@@ -120,7 +120,7 @@
                   <h4>Nuestros valores</h4>
                   <p>
                     Los principales valores que no caracterizan como empresa son: calidad, integridad, compromiso y respeto. El respero es fundamental para llegar a la cima de
-                    nuestro sector
+                    nuestro sector.
                   </p>
                 </div>
               </div>
@@ -157,7 +157,7 @@
             <div class="member" data-aos="fade-up" data-aos-delay="15000">
               <div class="pic"><img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1610649435/Tecnovacion/team/Team2_qfeixt.jpg" class="img-fluid" alt="team_avatar"></div>
               <div class="member-info">
-                <h4>Diego Gonzalez</h4>
+                <h4>Diego González</h4>
                 <span>Product Manager</span>
                 <div class="more">
                   <a onclick="showDetailTeam('Diego')" class="btn-primary">Ver perfil</a>
@@ -220,21 +220,21 @@
             <div class="icon-box" data-aos="fade-up">
               <div class="icon"><i class="bx bx-world"></i></div>
               <h4 class="title"><a href="">Desarrollo web</a></h4>
-              <p class="description">Diseño y programación de todo tipo de paginas web: tiendas online, catalogos, etc. </p>
+              <p class="description">Diseño y programación de todo tipo de páginas web: tiendas online, catálogos, etc. </p>
             </div>
           </div>
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bx bx-mobile"></i></div>
               <h4 class="title"><a href="">Desarrollo móvil</a></h4>
-              <p class="description">Desarrollo de palicaciones nativas para moviles y tablets</p>
+              <p class="description">Desarrollo de palicaciones nativas para dispositivos móviles.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><i class="bx bx-code-alt"></i></div>
               <h4 class="title"><a href="">Desarrollo de software</a></h4>
-              <p class="description">Software a la medida que facilita las labores cotidianas de nuestros clientes</p>
+              <p class="description">Software a la medida que facilita las labores cotidianas de nuestros clientes.</p>
             </div>
           </div>
         </div>
