--- a/prosoft.html
+++ b/prosoft.html
@@ -49,10 +49,157 @@
 
   <main id="main">
 
+    <!-- ======= prosoft Section ======= -->
+    <section id="prosoft" class="prosoft">
+      <div class="container">
+
+        <div class="section-title" data-aos="fade-in" data-aos-delay="100">
+          <h2>PROSOFT</h2>
+        </div>
+
+        <div class="row" data-aos="fade-in">
+          <div class="col-lg-12 d-flex justify-content-center">
+            <ul id="prosoft-flters">
+              <li data-filter="*" class="filter-active">Todo</li>
+              <li data-filter=".filter-solicitud">Solicitud</li>
+              <li data-filter=".filter-soporte">Documentación Soporte</li>
+              <li data-filter=".filter-cronograma">Cronograma</li>
+              <li data-filter=".filter-cotizacion">Cotización</li>
+              <li data-filter=".filter-anexo">Anexo</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="row prosoft-container" data-aos="fade-up">
+
+          <div class="col-lg-3 col-md-6 prosoft-item filter-solicitud">
+            <div class="prosoft-wrap">
+              <p class="prosoft-title-pdf">Solicitud (Anexo B)</p>
+              <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1611641114/Tecnovacion/prosoft/Solicitud_o5oxmv.jpg" class="img-fluid" alt="solicitud">
+              <div class="prosoft-links">
+                <a href="assets/files/Solicitud.pdf" download="Solicitud" title="Descargar"><i class="bx bx-download"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 prosoft-item filter-cronograma">
+            <div class="prosoft-wrap">
+              <p class="prosoft-title-pdf">Cronograma (PROSOFT)</p>
+              <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1611644138/Tecnovacion/prosoft/Cronograma_fwwb8r.jpg" class="img-fluid" alt="cronograma">
+              <div class="prosoft-links">
+                <a href="assets/files/Cronograma.pdf" download="Cronograma" title="Descargar"><i class="bx bx-download"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 prosoft-item filter-cotizacion">
+            <div class="prosoft-wrap">
+              <p class="prosoft-title-pdf">Cotización (Particular)</p>
+              <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1611644137/Tecnovacion/prosoft/Cotizacion_umwdsx.jpg" class="img-fluid" alt="cotizacion">
+              <div class="prosoft-links">
+                <a href="assets/files/Cotizacion.pdf" download="Cotizacion" title="Descargar"><i class="bx bx-download"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 prosoft-item filter-anexo">
+            <div class="prosoft-wrap">
+              <p class="prosoft-title-pdf">Anexo (El gobierno como cliente)</p>
+              <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1611644137/Tecnovacion/prosoft/Anexo_uybfmo.jpg" class="img-fluid" alt="anexo">
+              <div class="prosoft-links">
+                <a href="assets/files/Anexo.pdf" download="Anexo" title="Descargar"><i class="bx bx-download"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 prosoft-item filter-soporte">
+            <div class="prosoft-wrap">
+              <p class="prosoft-title-pdf">A - Carta bajo protesta de decir verdad del tamaño de la empresa</p>
+              <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1611645096/Tecnovacion/prosoft/a_bji8sn.jpg" class="img-fluid" alt="a_carta">
+              <div class="prosoft-links">
+                <a href="assets/files/A_Carta.pdf" title="Carta bajo protesta" download="A_Carta_Bajo Protesta"><i class="bx bx-download"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 prosoft-item filter-soporte">
+            <div class="prosoft-wrap">
+              <p class="prosoft-title-pdf">B - Carta de cotizaciones no firmadas</p>
+              <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1611645097/Tecnovacion/prosoft/b_sdm4i0.jpg" class="img-fluid" alt="b_carta">
+              <div class="prosoft-links">
+                <a href="assets/files/B_Carta_Cotizaciones.pdf" title="Carta Cotizaciones" download="B_Carta_Cotizaciones"><i class="bx bx-download"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 prosoft-item filter-soporte">
+            <div class="prosoft-wrap">
+              <p class="prosoft-title-pdf">C - Carta bajo protesta de decir verdad no recibe apoyo de otros apoyos del gobierno</p>
+              <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1611645096/Tecnovacion/prosoft/c_f6b5gt.jpg" class="img-fluid" alt="c_carta">
+              <div class="prosoft-links">
+                <a href="assets/files/C_Carta_Protesta.pdf" title="Carta protesta" download="C_Carta_Bajo_Protesta"><i class="bx bx-download"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 prosoft-item filter-soporte">
+            <div class="prosoft-wrap">
+              <p class="prosoft-title-pdf">D - Modelo paramétrico</p>
+              <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1611645097/Tecnovacion/prosoft/d_ydnzyu.jpg" class="img-fluid" alt="d_modelo">
+              <div class="prosoft-links">
+                <a href="assets/files/D_Modelo_Parametrico.pdf" download="D_Modelo_Parametrico" title="Modelo parametrico"><i class="bx bx-download"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 prosoft-item filter-soporte">
+            <div class="prosoft-wrap">
+              <p class="prosoft-title-pdf">E - Ficha de información personas representantes o apoderada legal</p>
+              <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1611645096/Tecnovacion/prosoft/e_yifzj8.jpg" class="img-fluid" alt="e_ficha">
+              <div class="prosoft-links">
+                <a href="assets/files/E_Ficha_Informacion.pdf" download="E_Ficha_Informacion_Personas" title="Ficha información personas"><i class="bx bx-download"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 prosoft-item filter-soporte">
+            <div class="prosoft-wrap">
+              <p class="prosoft-title-pdf">F - Ficha de información de proveedores</p>
+              <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1611645096/Tecnovacion/prosoft/f_tmyl96.jpg" class="img-fluid" alt="f_ficha">
+              <div class="prosoft-links">
+                <a href="assets/files/F_Ficha_Informacion.pdf" download="F_Ficha_Informacion_Proveedores" title="Ficha informacion proveedores"><i class="bx bx-download"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 prosoft-item filter-soporte">
+            <div class="prosoft-wrap">
+              <p class="prosoft-title-pdf">G - Diagrama de Gantt</p>
+              <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1611645096/Tecnovacion/prosoft/g_v6lzlr.jpg" class="img-fluid" alt="g_diagrama">
+              <div class="prosoft-links">
+                <a href="assets/files/G_Diagrama_Gantt.pdf" download="G_Diagrama_Gantt" title="Diagrama Gantt"><i class="bx bx-download"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 prosoft-item filter-soporte">
+            <div class="prosoft-wrap">
+              <p class="prosoft-title-pdf">H - Propuesta de plan de información capacitación del capital humano</p>
+              <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1611645096/Tecnovacion/prosoft/h_kxnjnp.jpg" class="img-fluid" alt="h_propuesta">
+              <div class="prosoft-links">
+                <a href="assets/files/H_Propuesta_Formacion.pdf" download="H_Propuesta_Formacion" title="Propuesta formación"><i class="bx bx-download"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 prosoft-item filter-soporte">
+            <div class="prosoft-wrap">
+              <p class="prosoft-title-pdf">I - Carta de autofinanciamiento</p>
+              <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1611645096/Tecnovacion/prosoft/i_ar3sly.jpg" class="img-fluid" alt="i_autofinanciamiento">
+              <div class="prosoft-links">
+                <a href="assets/files/I_Carta_Autofinanciamiento.pdf" download="I_Carta_Autofinanciamiento" title="Carta autofinanciamiento"><i class="bx bx-download"></i></a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section><!-- End prosoft Section -->
 
 
-<!-- ======= prosoft Section ======= -->
-     <section id="prosoft" class="prosoft">
+
+
+
+     <!-- <section id="prosoft" class="prosoft">
       <div class="container">
 
         <div class="prosoft-title" data-aos="fade-in" data-aos-delay="100">
@@ -63,10 +210,20 @@
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up">
               <div class="icon"><i class="bx bx-paperclip"></i></div>
+              <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1611641114/Tecnovacion/prosoft/Solicitud_o5oxmv.jpg" class="prosoft-imghttps://res.cloudinary.com/dfeujtobk/image/upload/v1611641114/Tecnovacion/prosoft/Solicitud_o5oxmv.jpg" alt="solicitud" >
+              <h4 class="title">
+                Solicitud
+              </h4>
+              <a href="assets/files/Solicitud.pdf" download="Solicitud">descargar</a>
+              </div>
+          </div>
+          <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box" data-aos="fade-up">
+              <div class="icon"><i class="bx bx-paperclip"></i></div>
               <h4 class="title">
                 Cotización
               </h4>
-              <a href="assets/data/Cotizacion.pdf" download="Cotizacion">descargar</a>
+              <a href="assets/files/Cotizacion.pdf" download="Cotizacion">descargar</a>
               </div>
           </div>
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
@@ -75,7 +232,7 @@
               <h4 class="title">
               	Anexo
               </h4>
-              <a href="assets/data/Anexo.pdf" download="Anexo">descargar</a>
+              <a href="assets/files/Anexo.pdf" download="Anexo">descargar</a>
               </div>
           </div>
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
@@ -84,14 +241,14 @@
               <h4 class="title">
                 Cronograma
               </h4>
-              <a href="assets/data/Cronograma.pdf" download="Cronograma">descargar</a>
+              <a href="assets/files/Cronograma.pdf" download="Cronograma">descargar</a>
               </div>
           </div>
         </div>
       </div>
 
       </div>
-    </section><!-- End prosoft Section -->
+    </section> -->
 
 
 
@@ -181,7 +338,6 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-  <script src="assets/js/validations.js"></script>
 
 
 </body>
